r270214 broke testb3 on arm64e https://bugs.webkit.org/show_bug.cgi?id=227713

Reviewed by Saam Barati.

ARM64E CAS lacks isBranch case. This patch adds isBranch implementation.
We also adjust disasm scanning test to support CAS in ARM64E.

* assembler/testmasm.cpp:
(JSC::testAtomicStrongCASFill8):
(JSC::testAtomicStrongCASFill16):
* b3/B3LowerToAir.cpp:
* b3/testb3_8.cpp:
(testAtomicWeakCAS):
(testAtomicStrongCAS):
(testAtomicXchg):

Canonical link: https://commits.webkit.org/239466@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279653 268f45cc-cd09-0410-ab3c-d52691b4dbfc